package UMLExercises.CDs.Impl.Cucina;

public class Menu {
    private Piatto[] piatti;

    public Menu(Piatto[] piatti) {
        this.piatti = piatti;
    }
}
