package UMLExercises.CDs.Impl.Cucina;

public class Pasta extends Piatto {

    public Pasta(String name) {
    super(name);
    }

    public void prepara() {

    }
}
