package UMLExercises.CDs.Impl.Cucina;

public class Ristorante {
    private Menu menu;

    public Ristorante(Menu menu) {
        this.menu = menu;
    }
}
